--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "Customer.io",
   "version": "1.0.0",
   "description": "Customer.IO API Server Integration",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -10,5 +10,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
+    "customerio-node": "^3.1.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
+  }
 }
